external-crates/move/crates/move-compiler/tests/move_check/parser/global_access_value.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/global_access_value.move:3:13
  │
3 │         1 + ::global_value
  │             ^^
  │             │
  │             Unexpected '::'
  │             Expected an expression term
