external-crates/move/crates/move-compiler/tests/move_check/parser/global_access_value.move
module 0x42::M {
    fun foo() {
        1 + ::global_value
    }
}
